--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,7 +88,7 @@ canvas {
 }
 
 .quote{
-    font-family: cursive;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
     font-size: x-small;
-    font-weight: lighter;
+    font-weight: 300;
 }
